--- a/_sources/laura_zigutyte/plantseg_custom_model/plantseg-blog-post.ipynb
+++ b/_sources/laura_zigutyte/plantseg_custom_model/plantseg-blog-post.ipynb
@@ -851,7 +851,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "output_scroll"
+    ]
    },
    "outputs": [
     {
